packages/yew-macro/tests/html_macro/node-fail.stderr
error: unexpected token, expected `}`
 --> tests/html_macro/node-fail.rs:4:29
  |
4 |     html! { <span>{ "valid" "invalid" }</span> };
  |                             ^^^^^^^^^

error: byte-strings can't be converted to HTML text
                                note: remove the `b` prefix or convert this to a `String`
  --> tests/html_macro/node-fail.rs:10:14
   |
10 |     html! {  b"str" };
   |              ^^^^^^

error: byte-strings can't be converted to HTML text
                                note: remove the `b` prefix or convert this to a `String`
  --> tests/html_macro/node-fail.rs:12:22
   |
12 |     html! {  <span>{ b"str" }</span> };
   |                      ^^^^^^

error[E0425]: cannot find value `invalid` in this scope
 --> tests/html_macro/node-fail.rs:6:13
  |
6 |     html! { invalid };
  |             ^^^^^^^ not found in this scope

error[E0277]: `()` doesn't implement `std::fmt::Display`
 --> tests/html_macro/node-fail.rs:5:13
  |
5 |     html! { () };
  |             ^^ `()` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `()`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = help: the following other types implement trait `From<T>`:
            `VNode` implements `From<ChildrenRenderer<VNode>>`
            `VNode` implements `From<T>`
            `VNode` implements `From<VChild<COMP>>`
            `VNode` implements `From<yew::virtual_dom::VComp>`
            `VNode` implements `From<yew::virtual_dom::VList>`
            `VNode` implements `From<yew::virtual_dom::VPortal>`
            `VNode` implements `From<yew::virtual_dom::VSuspense>`
            `VNode` implements `From<yew::virtual_dom::VTag>`
            `VNode` implements `From<yew::virtual_dom::VText>`
  = note: required for `()` to implement `ToString`
  = note: required for `VNode` to implement `From<()>`
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> tests/html_macro/node-fail.rs:16:9
   |
16 |         not_node()
   |         ^^^^^^^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = help: the following other types implement trait `From<T>`:
             `VNode` implements `From<ChildrenRenderer<VNode>>`
             `VNode` implements `From<T>`
             `VNode` implements `From<VChild<COMP>>`
             `VNode` implements `From<yew::virtual_dom::VComp>`
             `VNode` implements `From<yew::virtual_dom::VList>`
             `VNode` implements `From<yew::virtual_dom::VPortal>`
             `VNode` implements `From<yew::virtual_dom::VSuspense>`
             `VNode` implements `From<yew::virtual_dom::VTag>`
             `VNode` implements `From<yew::virtual_dom::VText>`
   = note: required for `()` to implement `ToString`
   = note: required for `VNode` to implement `From<()>`
   = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)
